Fix scrollbar issue

--- a/src/JsonRpcNet.Docs/web/src/assets/theme.scss
+++ b/src/JsonRpcNet.Docs/web/src/assets/theme.scss
@@ -67,6 +67,7 @@ $theme-colors: (
 // scroll-bar
 ::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-track {
